--- a/report.tex
+++ b/report.tex
@@ -10,10 +10,24 @@
 \centerline{Michael Walter \hspace{0.1in} James Mouradian \hspace{0.1in} Victor Balcer}
 \vspace{4.0pt}
 \centerline{\today}
-\section{Functionality}
-We implemented fully homomorphic encyryption and were able to perform a homomorphic
-NAND gate with parameters: $n=4$, $q=64$, $Q=2^{25}$, and $\beta=1$.
-(i.e. keys $s\in \mathbb{Z}_{64}^4$ and $z\in\mathbb{Z}_{2^{25}}^4$).
+
+For our project we implemented fully homomorphic encryption, using the scheme
+described in class and in lecture notes, using the Sage open-source mathematics
+framework.
+
+\section{Results}
+
+We implemented a proof-of-concept NAND gate, since it is functionally complete.
+The implementation is highly inefficient and features no alebraic
+optimizations; our proof-of-concept takes approximately twenty minutes to
+compute an encrypted NAND over two bits with the following parameters: $n=4$,
+$q=64$, $Q=2^{25}$, and $\Beta=1$ (i.e. keys $s\in \mathbb{Z}_{64}^4$ and
+$z\in\mathbb{Z}_{2^{25}}^4$). These are the smallest parameters for which we
+can compute a NAND gate with error $\Beta > 0$. To validate the gate, we
+computed an encrypted NAND over two randomly generated bits and compared the
+the decrypted output with the expected output. Decryption was successful across
+twenty independent trials. The the trials are meaningful; with increased error
+the test reports both positive and negative results.
 
 \section{Parameter Tuning}
 
